src/libqwidget.h

typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QBackingStore QBackingStore;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QKeySequence QKeySequence;
typedef struct QLayout QLayout;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScreen QScreen;
typedef struct QShowEvent QShowEvent;
typedef struct QTabletEvent QTabletEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
typedef struct QWindow QWindow;
void QWidget_SetLayout(QWidget* self, QLayout* layout);
void QWidget_UpdateGeometry(QWidget* self);
void QWidget_SetParent(QWidget* self, QWidget* parent);
void QWidget_SetParent2(QWidget* self, QWidget* parent, int f);
void QWidget_Scroll(QWidget* self, int dx, int dy);
void QWidget_Scroll2(QWidget* self, int dx, int dy, QRect* param3);
QWidget* QWidget_FocusWidget(const QWidget* self);
QWidget* QWidget_NextInFocusChain(const QWidget* self);
QWidget* QWidget_PreviousInFocusChain(const QWidget* self);
bool QWidget_AcceptDrops(const QWidget* self);
void QWidget_SetAcceptDrops(QWidget* self, bool on);
void QWidget_AddAction(QWidget* self, QAction* action);
void QWidget_AddActions(QWidget* self, libqt_list /* of QAction* */ actions);
void QWidget_InsertActions(QWidget* self, QAction* before, libqt_list /* of QAction* */ actions);
void QWidget_InsertAction(QWidget* self, QAction* before, QAction* action);
void QWidget_RemoveAction(QWidget* self, QAction* action);
libqt_list /* of QAction* */ QWidget_Actions(const QWidget* self);
QAction* QWidget_AddActionWithText(QWidget* self, libqt_string text);
QAction* QWidget_AddAction2(QWidget* self, QIcon* icon, libqt_string text);
QAction* QWidget_AddAction3(QWidget* self, libqt_string text, QKeySequence* shortcut);
QAction* QWidget_AddAction4(QWidget* self, QIcon* icon, libqt_string text, QKeySequence* shortcut);
QWidget* QWidget_ParentWidget(const QWidget* self);
void QWidget_SetWindowFlags(QWidget* self, int typeVal);
int QWidget_WindowFlags(const QWidget* self);
void QWidget_SetWindowFlag(QWidget* self, int param1);
void QWidget_OverrideWindowFlags(QWidget* self, int typeVal);
int QWidget_WindowType(const QWidget* self);
QWidget* QWidget_Find(unsigned long long param1);
QWidget* QWidget_ChildAt(const QWidget* self, int x, int y);
QWidget* QWidget_ChildAtWithQPoint(const QWidget* self, QPoint* p);
void QWidget_SetAttribute(QWidget* self, int param1);
bool QWidget_TestAttribute(const QWidget* self, int param1);
QPaintEngine* QWidget_PaintEngine(const QWidget* self);
void QWidget_EnsurePolished(const QWidget* self);
bool QWidget_IsAncestorOf(const QWidget* self, QWidget* child);
bool QWidget_AutoFillBackground(const QWidget* self);
void QWidget_SetAutoFillBackground(QWidget* self, bool enabled);
QBackingStore* QWidget_BackingStore(const QWidget* self);
QWindow* QWidget_WindowHandle(const QWidget* self);
QScreen* QWidget_Screen(const QWidget* self);
void QWidget_SetScreen(QWidget* self, QScreen* screen);
QWidget* QWidget_CreateWindowContainer(QWindow* window);
void QWidget_WindowTitleChanged(QWidget* self, libqt_string title);
void QWidget_WindowIconChanged(QWidget* self, QIcon* icon);
void QWidget_WindowIconTextChanged(QWidget* self, libqt_string iconText);
void QWidget_CustomContextMenuRequested(QWidget* self, QPoint* pos);
bool QWidget_Event(QWidget* self, QEvent* event);
void QWidget_MousePressEvent(QWidget* self, QMouseEvent* event);
void QWidget_MouseReleaseEvent(QWidget* self, QMouseEvent* event);
void QWidget_MouseDoubleClickEvent(QWidget* self, QMouseEvent* event);
void QWidget_MouseMoveEvent(QWidget* self, QMouseEvent* event);
void QWidget_WheelEvent(QWidget* self, QWheelEvent* event);
void QWidget_KeyPressEvent(QWidget* self, QKeyEvent* event);
void QWidget_KeyReleaseEvent(QWidget* self, QKeyEvent* event);
void QWidget_FocusInEvent(QWidget* self, QFocusEvent* event);
void QWidget_FocusOutEvent(QWidget* self, QFocusEvent* event);
void QWidget_EnterEvent(QWidget* self, QEnterEvent* event);
void QWidget_LeaveEvent(QWidget* self, QEvent* event);
void QWidget_PaintEvent(QWidget* self, QPaintEvent* event);
void QWidget_MoveEvent(QWidget* self, QMoveEvent* event);
void QWidget_ResizeEvent(QWidget* self, QResizeEvent* event);
void QWidget_CloseEvent(QWidget* self, QCloseEvent* event);
void QWidget_ContextMenuEvent(QWidget* self, QContextMenuEvent* event);
void QWidget_TabletEvent(QWidget* self, QTabletEvent* event);
void QWidget_ActionEvent(QWidget* self, QActionEvent* event);
void QWidget_DragEnterEvent(QWidget* self, QDragEnterEvent* event);
void QWidget_DragMoveEvent(QWidget* self, QDragMoveEvent* event);
void QWidget_DragLeaveEvent(QWidget* self, QDragLeaveEvent* event);
void QWidget_DropEvent(QWidget* self, QDropEvent* event);
void QWidget_ShowEvent(QWidget* self, QShowEvent* event);
void QWidget_HideEvent(QWidget* self, QHideEvent* event);
bool QWidget_NativeEvent(QWidget* self, libqt_string eventType, void* message, intptr_t* result);
void QWidget_ChangeEvent(QWidget* self, QEvent* param1);
int QWidget_Metric(const QWidget* self, int param1);
void QWidget_InitPainter(const QWidget* self, QPainter* painter);
QPaintDevice* QWidget_Redirected(const QWidget* self, QPoint* offset);
QPainter* QWidget_SharedPainter(const QWidget* self);
void QWidget_InputMethodEvent(QWidget* self, QInputMethodEvent* param1);
QVariant* QWidget_InputMethodQuery(const QWidget* self, int param1);
int QWidget_InputMethodHints(const QWidget* self);
void QWidget_SetInputMethodHints(QWidget* self, int hints);
bool QWidget_FocusNextPrevChild(QWidget* self, bool next);
libqt_string QWidget_Tr2(const char* s, const char* c);
libqt_string QWidget_Tr3(const char* s, const char* c, int n);
void QWidget_Render2(QWidget* self, QPaintDevice* target, QPoint* targetOffset);
void QWidget_Render3(QWidget* self, QPaintDevice* target, QPoint* targetOffset, QRegion* sourceRegion);
void QWidget_Render4(QWidget* self, QPaintDevice* target, QPoint* targetOffset, QRegion* sourceRegion, int renderFlags);
void QWidget_Render22(QWidget* self, QPainter* painter, QPoint* targetOffset);
void QWidget_Render32(QWidget* self, QPainter* painter, QPoint* targetOffset, QRegion* sourceRegion);
void QWidget_Render42(QWidget* self, QPainter* painter, QPoint* targetOffset, QRegion* sourceRegion, int renderFlags);
QPixmap* QWidget_Grab1(QWidget* self, QRect* rectangle);
void QWidget_GrabGesture2(QWidget* self, int typeVal, int flags);
int QWidget_GrabShortcut2(QWidget* self, QKeySequence* key, int context);
void QWidget_SetShortcutEnabled2(QWidget* self, int id, bool enable);
void QWidget_SetShortcutAutoRepeat2(QWidget* self, int id, bool enable);
void QWidget_UpdateMicroFocus(QWidget* self);
void QWidget_Create(QWidget* self);
void QWidget_Destroy(QWidget* self);
bool QWidget_FocusNextChild(QWidget* self);
bool QWidget_FocusPreviousChild(QWidget* self);