src/qt/libqwidget.bf

	[LinkName("QWidget_SetLayout")]
	public static extern void QWidget_SetLayout(Self* c_this, QLayout* layout);
	[LinkName("QWidget_UpdateGeometry")]
	public static extern void QWidget_UpdateGeometry(Self* c_this);
	[LinkName("QWidget_SetParent")]
	public static extern void QWidget_SetParent(Self* c_this, QWidget* parent);
	[LinkName("QWidget_SetParent2")]
	public static extern void QWidget_SetParent2(Self* c_this, QWidget* parent, int64 f);
	[LinkName("QWidget_Scroll")]
	public static extern void QWidget_Scroll(Self* c_this, int32 dx, int32 dy);
	[LinkName("QWidget_Scroll2")]
	public static extern void QWidget_Scroll2(Self* c_this, int32 dx, int32 dy, QRect* param3);
	[LinkName("QWidget_FocusWidget")]
	public static extern QWidget* QWidget_FocusWidget(Self* c_this);
	[LinkName("QWidget_NextInFocusChain")]
	public static extern QWidget* QWidget_NextInFocusChain(Self* c_this);
	[LinkName("QWidget_PreviousInFocusChain")]
	public static extern QWidget* QWidget_PreviousInFocusChain(Self* c_this);
	[LinkName("QWidget_AcceptDrops")]
	public static extern bool QWidget_AcceptDrops(Self* c_this);
	[LinkName("QWidget_SetAcceptDrops")]
	public static extern void QWidget_SetAcceptDrops(Self* c_this, bool on);
	[LinkName("QWidget_AddAction")]
	public static extern void QWidget_AddAction(Self* c_this, QAction* action);
	[LinkName("QWidget_AddActions")]
	public static extern void QWidget_AddActions(Self* c_this, QAction*[] actions);
	[LinkName("QWidget_InsertActions")]
	public static extern void QWidget_InsertActions(Self* c_this, QAction* before, QAction*[] actions);
	[LinkName("QWidget_InsertAction")]
	public static extern void QWidget_InsertAction(Self* c_this, QAction* before, QAction* action);
	[LinkName("QWidget_RemoveAction")]
	public static extern void QWidget_RemoveAction(Self* c_this, QAction* action);
	[LinkName("QWidget_Actions")]
	public static extern QAction*[] QWidget_Actions(Self* c_this);
	[LinkName("QWidget_AddActionWithText")]
	public static extern QAction* QWidget_AddActionWithText(Self* c_this, libqt_string text);
	[LinkName("QWidget_AddAction2")]
	public static extern QAction* QWidget_AddAction2(Self* c_this, QIcon* icon, libqt_string text);
	[LinkName("QWidget_AddAction3")]
	public static extern QAction* QWidget_AddAction3(Self* c_this, libqt_string text, QKeySequence* shortcut);
	[LinkName("QWidget_AddAction4")]
	public static extern QAction* QWidget_AddAction4(Self* c_this, QIcon* icon, libqt_string text, QKeySequence* shortcut);
	[LinkName("QWidget_ParentWidget")]
	public static extern QWidget* QWidget_ParentWidget(Self* c_this);
	[LinkName("QWidget_SetWindowFlags")]
	public static extern void QWidget_SetWindowFlags(Self* c_this, int64 typeVal);
	[LinkName("QWidget_WindowFlags")]
	public static extern int64 QWidget_WindowFlags(Self* c_this);
	[LinkName("QWidget_SetWindowFlag")]
	public static extern void QWidget_SetWindowFlag(Self* c_this, int64 param1);
	[LinkName("QWidget_OverrideWindowFlags")]
	public static extern void QWidget_OverrideWindowFlags(Self* c_this, int64 typeVal);
	[LinkName("QWidget_WindowType")]
	public static extern int64 QWidget_WindowType(Self* c_this);
	[LinkName("QWidget_Find")]
	public static extern QWidget* QWidget_Find(uint64 param1);
	[LinkName("QWidget_ChildAt")]
	public static extern QWidget* QWidget_ChildAt(Self* c_this, int32 x, int32 y);
	[LinkName("QWidget_ChildAtWithQPoint")]
	public static extern QWidget* QWidget_ChildAtWithQPoint(Self* c_this, QPoint* p);
	[LinkName("QWidget_SetAttribute")]
	public static extern void QWidget_SetAttribute(Self* c_this, int64 param1);
	[LinkName("QWidget_TestAttribute")]
	public static extern bool QWidget_TestAttribute(Self* c_this, int64 param1);
	[LinkName("QWidget_PaintEngine")]
	public static extern QPaintEngine* QWidget_PaintEngine(Self* c_this);
	[LinkName("QWidget_EnsurePolished")]
	public static extern void QWidget_EnsurePolished(Self* c_this);
	[LinkName("QWidget_IsAncestorOf")]
	public static extern bool QWidget_IsAncestorOf(Self* c_this, QWidget* child);
	[LinkName("QWidget_AutoFillBackground")]
	public static extern bool QWidget_AutoFillBackground(Self* c_this);
	[LinkName("QWidget_SetAutoFillBackground")]
	public static extern void QWidget_SetAutoFillBackground(Self* c_this, bool enabled);
	[LinkName("QWidget_BackingStore")]
	public static extern QBackingStore* QWidget_BackingStore(Self* c_this);
	[LinkName("QWidget_WindowHandle")]
	public static extern QWindow* QWidget_WindowHandle(Self* c_this);
	[LinkName("QWidget_Screen")]
	public static extern QScreen* QWidget_Screen(Self* c_this);
	[LinkName("QWidget_SetScreen")]
	public static extern void QWidget_SetScreen(Self* c_this, QScreen* screen);
	[LinkName("QWidget_CreateWindowContainer")]
	public static extern QWidget* QWidget_CreateWindowContainer(QWindow* window);
	[LinkName("QWidget_WindowTitleChanged")]
	public static extern void QWidget_WindowTitleChanged(Self* c_this, libqt_string title);
	[LinkName("QWidget_WindowIconChanged")]
	public static extern void QWidget_WindowIconChanged(Self* c_this, QIcon* icon);
	[LinkName("QWidget_WindowIconTextChanged")]
	public static extern void QWidget_WindowIconTextChanged(Self* c_this, libqt_string iconText);
	[LinkName("QWidget_CustomContextMenuRequested")]
	public static extern void QWidget_CustomContextMenuRequested(Self* c_this, QPoint* pos);
	[LinkName("QWidget_Event")]
	public static extern bool QWidget_Event(Self* c_this, QEvent* event);
	[LinkName("QWidget_MousePressEvent")]
	public static extern void QWidget_MousePressEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QWidget_MouseReleaseEvent")]
	public static extern void QWidget_MouseReleaseEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QWidget_MouseDoubleClickEvent")]
	public static extern void QWidget_MouseDoubleClickEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QWidget_MouseMoveEvent")]
	public static extern void QWidget_MouseMoveEvent(Self* c_this, QMouseEvent* event);
	[LinkName("QWidget_WheelEvent")]
	public static extern void QWidget_WheelEvent(Self* c_this, QWheelEvent* event);
	[LinkName("QWidget_KeyPressEvent")]
	public static extern void QWidget_KeyPressEvent(Self* c_this, QKeyEvent* event);
	[LinkName("QWidget_KeyReleaseEvent")]
	public static extern void QWidget_KeyReleaseEvent(Self* c_this, QKeyEvent* event);
	[LinkName("QWidget_FocusInEvent")]
	public static extern void QWidget_FocusInEvent(Self* c_this, QFocusEvent* event);
	[LinkName("QWidget_FocusOutEvent")]
	public static extern void QWidget_FocusOutEvent(Self* c_this, QFocusEvent* event);
	[LinkName("QWidget_EnterEvent")]
	public static extern void QWidget_EnterEvent(Self* c_this, QEnterEvent* event);
	[LinkName("QWidget_LeaveEvent")]
	public static extern void QWidget_LeaveEvent(Self* c_this, QEvent* event);
	[LinkName("QWidget_PaintEvent")]
	public static extern void QWidget_PaintEvent(Self* c_this, QPaintEvent* event);
	[LinkName("QWidget_MoveEvent")]
	public static extern void QWidget_MoveEvent(Self* c_this, QMoveEvent* event);
	[LinkName("QWidget_ResizeEvent")]
	public static extern void QWidget_ResizeEvent(Self* c_this, QResizeEvent* event);
	[LinkName("QWidget_CloseEvent")]
	public static extern void QWidget_CloseEvent(Self* c_this, QCloseEvent* event);
	[LinkName("QWidget_ContextMenuEvent")]
	public static extern void QWidget_ContextMenuEvent(Self* c_this, QContextMenuEvent* event);
	[LinkName("QWidget_TabletEvent")]
	public static extern void QWidget_TabletEvent(Self* c_this, QTabletEvent* event);
	[LinkName("QWidget_ActionEvent")]
	public static extern void QWidget_ActionEvent(Self* c_this, QActionEvent* event);
	[LinkName("QWidget_DragEnterEvent")]
	public static extern void QWidget_DragEnterEvent(Self* c_this, QDragEnterEvent* event);
	[LinkName("QWidget_DragMoveEvent")]
	public static extern void QWidget_DragMoveEvent(Self* c_this, QDragMoveEvent* event);
	[LinkName("QWidget_DragLeaveEvent")]
	public static extern void QWidget_DragLeaveEvent(Self* c_this, QDragLeaveEvent* event);
	[LinkName("QWidget_DropEvent")]
	public static extern void QWidget_DropEvent(Self* c_this, QDropEvent* event);
	[LinkName("QWidget_ShowEvent")]
	public static extern void QWidget_ShowEvent(Self* c_this, QShowEvent* event);
	[LinkName("QWidget_HideEvent")]
	public static extern void QWidget_HideEvent(Self* c_this, QHideEvent* event);
	[LinkName("QWidget_NativeEvent")]
	public static extern bool QWidget_NativeEvent(Self* c_this, libqt_string eventType, void* message, c_uintptr* result);
	[LinkName("QWidget_ChangeEvent")]
	public static extern void QWidget_ChangeEvent(Self* c_this, QEvent* param1);
	[LinkName("QWidget_Metric")]
	public static extern int32 QWidget_Metric(Self* c_this, int64 param1);
	[LinkName("QWidget_InitPainter")]
	public static extern void QWidget_InitPainter(Self* c_this, QPainter* painter);
	[LinkName("QWidget_Redirected")]
	public static extern QPaintDevice* QWidget_Redirected(Self* c_this, QPoint* offset);
	[LinkName("QWidget_SharedPainter")]
	public static extern QPainter* QWidget_SharedPainter(Self* c_this);
	[LinkName("QWidget_InputMethodEvent")]
	public static extern void QWidget_InputMethodEvent(Self* c_this, QInputMethodEvent* param1);
	[LinkName("QWidget_InputMethodQuery")]
	public static extern QVariant QWidget_InputMethodQuery(Self* c_this, int64 param1);
	[LinkName("QWidget_InputMethodHints")]
	public static extern int64 QWidget_InputMethodHints(Self* c_this);
	[LinkName("QWidget_SetInputMethodHints")]
	public static extern void QWidget_SetInputMethodHints(Self* c_this, int64 hints);
	[LinkName("QWidget_UpdateMicroFocus")]
	public static extern void QWidget_UpdateMicroFocus(Self* c_this);
	[LinkName("QWidget_Create")]
	public static extern void QWidget_Create(Self* c_this);
	[LinkName("QWidget_Destroy")]
	public static extern void QWidget_Destroy(Self* c_this);
	[LinkName("QWidget_FocusNextPrevChild")]
	public static extern bool QWidget_FocusNextPrevChild(Self* c_this, bool next);
	[LinkName("QWidget_FocusNextChild")]
	public static extern bool QWidget_FocusNextChild(Self* c_this);
	[LinkName("QWidget_FocusPreviousChild")]
	public static extern bool QWidget_FocusPreviousChild(Self* c_this);
	[LinkName("QWidget_Tr2")]
	public static extern libqt_string QWidget_Tr2(char8[] s, char8[] c);
	[LinkName("QWidget_Tr3")]
	public static extern libqt_string QWidget_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QWidget_Render2")]
	public static extern void QWidget_Render2(Self* c_this, QPaintDevice* target, QPoint* targetOffset);
	[LinkName("QWidget_Render3")]
	public static extern void QWidget_Render3(Self* c_this, QPaintDevice* target, QPoint* targetOffset, QRegion* sourceRegion);
	[LinkName("QWidget_Render4")]
	public static extern void QWidget_Render4(Self* c_this, QPaintDevice* target, QPoint* targetOffset, QRegion* sourceRegion, int64 renderFlags);
	[LinkName("QWidget_Render22")]
	public static extern void QWidget_Render22(Self* c_this, QPainter* painter, QPoint* targetOffset);
	[LinkName("QWidget_Render32")]
	public static extern void QWidget_Render32(Self* c_this, QPainter* painter, QPoint* targetOffset, QRegion* sourceRegion);
	[LinkName("QWidget_Render42")]
	public static extern void QWidget_Render42(Self* c_this, QPainter* painter, QPoint* targetOffset, QRegion* sourceRegion, int64 renderFlags);
	[LinkName("QWidget_Grab1")]
	public static extern QPixmap QWidget_Grab1(Self* c_this, QRect* rectangle);
	[LinkName("QWidget_GrabGesture2")]
	public static extern void QWidget_GrabGesture2(Self* c_this, int64 typeVal, int64 flags);
	[LinkName("QWidget_GrabShortcut2")]
	public static extern int32 QWidget_GrabShortcut2(Self* c_this, QKeySequence* key, int64 context);
	[LinkName("QWidget_SetShortcutEnabled2")]
	public static extern void QWidget_SetShortcutEnabled2(Self* c_this, int32 id, bool enable);
	[LinkName("QWidget_SetShortcutAutoRepeat2")]
	public static extern void QWidget_SetShortcutAutoRepeat2(Self* c_this, int32 id, bool enable);
